--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -11,10 +11,12 @@ label#event_start_label {
 }
 
 #event-show-delete-button {
-  margin-right: 20px;
+  margin-right: 0px;
 }
 #event-show-actions{
   margin: 0;
+  top: 180px;
+  padding-top: 120px;
 }
 
 .event-info .icon {
@@ -30,4 +32,56 @@ label#event_start_label {
 
 .event-info .info {
   padding: 1.3rem 0 0 9rem;
+}
+
+#card-image-spot  {
+  padding-left: 0px;
+  padding-right: 0px;
+
+  // img {
+  //   width: 100%;
+  // }
+
+}
+img#event-show-image {
+  width: 100%;
+  height: 350px;
+}
+
+#event-card {
+  background-color: #EFF3F5;
+  background-size: contain;
+}
+
+.event-date-day-card {
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+  line-height: 1.25em;
+  letter-spacing: 1px;
+  text-align: left;
+}
+.event-date-month-card {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 15px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+}
+
+#event-title-show {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+}
+
+#date-title-container {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+#event-abbr-date-card {
+  padding-left: 0px;
+  margin-bottom: 10px;
 }
