--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
-<div class="row" id="event-show-actions">
+<div class="fixed-action-btn" id="event-show-actions">
 <% if user_signed_in? %>
   <% if current_user.admin? %>
-  <%= link_to event_path(@event), data: { position: "bottom", delay: "50", tooltip: "Delete Event" }, method: :delete,  class: "right btn-floating btn-large waves-effect waves-light red tooltipped", id: "event-show-delete-button" do %>
+  <%= link_to event_path(@event), data: { position: "bottom", delay: "50", tooltip: "Delete Event", confirm: "Are you sure you want to delete this event?" }, method: :delete,  class: "right btn-floating btn-large waves-effect waves-light red tooltipped", id: "event-show-delete-button" do %>
       <i class="material-icons">delete</i>
     <% end %>
     <%= link_to edit_event_path(@event), data: { position: "bottom", delay: "50", tooltip: "Edit Event" }, class: "right btn-floating btn-large waves-effect waves-light green tooltipped", id: "event-show-edit-button" do %>
@@ -10,19 +10,53 @@
   <% end %>
 <% end %>
 </div>
+<div class="row" id="event-card">
+  <div class="horizontal-card">
+    <div class="col s12 l9" id="card-image-spot">
+      <%= image_tag(@event.picture, id: "event-show-image") %>
+    </div>
+    <div class="card-content col s12 l3">
+      <div class="cool">
+        <div class="col l12 offset-l1 m12" id="date-title-container">
+          <div class="col m5 l12 hide-on-small-only" id="event-abbr-date-card">
+            <p class="event-date-month-card"><%= @event.start.strftime('%b') %></p>
+            <p class="event-date-day-card"><%= @event.start.strftime('%d') %></p>
+          </div>
+          <div class="col m6 l12" id="event-title-show">
+            <%= @event.title %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="hide-on-med-and-down">
+  <% if user_signed_in? %>
+    <% if @userattending %>
+      <div>
+      <%= link_to "Register", new_event_attendee_path(@event), class: "green btn" %>
+      </div>
+    <% else %>
+      <div>
+        <%= link_to "Cancel Attendance", "#", class: "red btn" %>
+        You are attending this event! :)
+        This the form to update your attendance. (Cancel or Update)
+      </div>
+    <% end %>
+    <%= link_to("Download to ICal", :controller => 'events', :action => :show, :format => :ics) %>
+  <% end %>
+</div>
 
 <div class="container">
   <div class="row">
-    <div class="col s12 m4 l4">
-      <div class="event-info">
+    <div class="col l12 s12 m12">
+      <div class="col s12 m4 l4 event-info">
         <div class="icon fa fa-map-marker"></div>
         <div class="info">
           <%= @event.location %>
         </div>
       </div>
-    </div>
-    <div class="col s12 m4 l4">
-      <div class="event-info">
+      <div class="col s12 m4 l4 event-info">
         <div class="icon fa fa-calendar"></div>
         <div class="info">
           <ul>
@@ -31,9 +65,7 @@
           </ul>
         </div>
       </div>
-    </div>
-    <div class="col s12 m4 l4">
-      <div class="event-info">
+      <div class="col s12 m4 l4 event-info">
         <div class="icon fa fa-users"></div>
         <div class="info">
           <%= @event.max_participants %> spots!
@@ -42,9 +74,9 @@
     </div>
   </div>
 </div>
+
 <div class="col s12 m12 l12 divider"></div>
 <div class="">
-  <%= image_tag(@event.picture, size: "300") %>
 </div>
 <%= @event.title %>
 
@@ -52,17 +84,17 @@
 <%= @event.description %>
 </div>
 
-<% if @userattending.empty? %>
-  <div>
-    Seems like your not attending this event :( !
-
-    This is the form to attending!
-  </div>
-<% else %>
-  <div>
-    You are attending this event! :)
-
-    This the form to update your attendance. (Cancel or Update)
-  </div>
+<% if user_signed_in? %>
+  <% if @userattending %>
+    <div>
+    <%= link_to "Register", new_event_attendee_path(@event), class: "green btn" %>
+    </div>
+  <% else %>
+    <div>
+      <%= link_to "Cancel Attendance", "#", class: "red btn" %>
+      You are attending this event! :)
+      This the form to update your attendance. (Cancel or Update)
+    </div>
+  <% end %>
+  <%= link_to("Download to ICal", :controller => 'events', :action => :show, :format => :ics) %>
 <% end %>
-<%= link_to "Download to ICal",:controller => 'events', :action => :show, :format => :ics %>
