--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <%= render "layouts/flashes" %>
   <%= render "layouts/navbar" %>
   <div id="topbanner">
-    <%= image_tag("St-BotolphBanner1_01.gif") %>
+    <!-- <%= image_tag("St-BotolphBanner1_01.gif") %> -->
   </div>
 <%= yield %>
 
