--- a/app/views/events/calendar.html.erb
+++ b/app/views/events/calendar.html.erb
@@ -1,9 +1,11 @@
 <div class="row">
 <% if user_signed_in? %>
   <% if current_user.admin? %>
-    <%= link_to new_event_path, data: { position: "bottom", delay: "50", tooltip: "Create Event" }, class: "right btn-floating btn-large waves-effect waves-light red tooltipped" do %>
-      <i class="material-icons">add</i>
-    <% end %>
+    <div class="fixed-action-btn">
+      <%= link_to new_event_path, data: { position: "bottom", delay: "50", tooltip: "Create Event" }, class: "right btn-floating btn-large waves-effect waves-light red tooltipped" do %>
+        <i class="material-icons">add</i>
+      <% end %>
+    </div>
   <% end %>
 <% end %>
   <div class="col s10 offset-s1">
