set up footer to display registration button

--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -90,3 +90,13 @@ img#event-show-image {
   right: 0;
   height: 75px;
 }
+
+#event-page-footer {
+  margin-top: 0px;
+  padding-top: 0px;
+}
+
+#price-footer-event-show {
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
