--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -76,30 +76,31 @@
 </div>
 
 <div class="col s12 m12 l12 divider"></div>
-<%= @event.description %>
+  <%= @event.description %>
 <div class="hide-on-large-only">
-  <footer class="page-footer">
-   <div class="container">
-     <div class="row">
-       <div class="col s12">
-         <p class="grey-text text-lighten-4 center-align">Free</p>
-       </div>
+  <footer class="page-footer" id="event-page-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <p class="grey-text text-lighten-4 center-align" id="price-footer-event-show">Free</p>
+        </div>
+        <div class="col s12 center-align">
+         <% if user_signed_in? %>
+           <% if @userattending %>
+             <div>
+             <%= link_to "Register", new_event_attendee_path(@event), class: "green btn" %>
+             </div>
+           <% else %>
+             <div>
+               <%= link_to "Cancel Attendance", "#", class: "red btn" %>
+               You are attending this event! :)
+               This the form to update your attendance. (Cancel or Update)
+             </div>
+           <% end %>
+           <!-- <%= link_to("Download to ICal", :controller => 'events', :action => :show, :format => :ics) %> -->
+         <% end %>
+        </div>
       </div>
-   </div>
- </footer>
-
-  <% if user_signed_in? %>
-    <% if @userattending %>
-      <div>
-      <%= link_to "Register", new_event_attendee_path(@event), class: "green btn" %>
-      </div>
-    <% else %>
-      <div>
-        <%= link_to "Cancel Attendance", "#", class: "red btn" %>
-        You are attending this event! :)
-        This the form to update your attendance. (Cancel or Update)
-      </div>
-    <% end %>
-    <%= link_to("Download to ICal", :controller => 'events', :action => :show, :format => :ics) %>
-  <% end %>
+    </div>
+  </footer>
 </div>
