--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
       <div class="" id="event-show-actions">
         <% if user_signed_in? %>
           <% if current_user.admin? %>
-          <%= link_to event_path(@event), data: { position: "bottom", delay: "50", tooltip: "Delete Event", confirm: "Are you sure you want to delete this event?" }, method: :delete,  class: "right btn-floating btn-large waves-effect waves-light red tooltipped", id: "event-show-delete-button" do %>
+          <%= link_to event_path(@event), data: { position: "bottom", delay: "50", tooltip: "Delete Event", confirm: "Are you sure you want to delete this event?" }, method: :delete,  class: "right btn-floating btn-large waves-effect waves-light red darken-4 tooltipped", id: "event-show-delete-button" do %>
               <i class="material-icons">delete</i>
             <% end %>
             <%= link_to edit_event_path(@event), data: { position: "bottom", delay: "50", tooltip: "Edit Event" }, class: "right btn-floating btn-large waves-effect waves-light green tooltipped", id: "event-show-edit-button" do %>
