--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -83,20 +83,22 @@ img#event-show-image {
   margin-bottom: 10px;
 }
 
-.page-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 75px;
+div .event-info div {
+  padding-left: 0px;
+  margin-bottom: 10px;
 }
 
 #event-page-footer {
   margin-top: 0px;
   padding-top: 0px;
+  background-color: #922429;
 }
 
 #price-footer-event-show {
   margin-top: 7px;
   margin-bottom: 7px;
+}
+
+.borderbox-under {
+  border: 1px solid black;
 }
