change event show page to always be set style

--- a/app/views/events/_eventshowinfo.html.erb
+++ b/app/views/events/_eventshowinfo.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="event-info">
-      <div class="col s12 l8 description">
+      <div class="col s8 description">
         <h5 class="event-date-month-card">description</h5>
         <%= @event.description %>
       </div>
-      <div class="col l4 details">
+      <div class="col s4 details">
         <div class="date">
           <h5 class="event-date-month-card">Date and Time</h5>
           <ul>
