set final changes for eventshow page

--- a/app/views/events/_eventshowinfo.html.erb
+++ b/app/views/events/_eventshowinfo.html.erb
@@ -22,6 +22,10 @@
           <h5 class="event-date-month-card">Availabilty</h5>
           Blank spots left of <%= @event.max_participants %>
         </div>
+        <div class="price">
+          <h5 class="event-date-month-card">Price</h5>
+          Price variable logic
+        </div>
       </div>
     </div>
   </div>
