added backend interface

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -38,7 +38,7 @@
           </li>
           <% if current_user.admin? %>
             <li>
-              <%= link_to("Admin Section", admin_users_path,
+              <%= link_to("Admin Section", rails_admin_path,
               class: "sign-links user-signs") %>
             </li>
           <% end %>
