--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -49,28 +49,29 @@
   <div id="modal1" class="modal modal-fixed-footer">
     <div class="modal-content">
       <h4>Register for <%= @event.title  %></h4>
-      <form>
-        <label>Guests</label>
-        <select class="browser-default" id="guestNum">
-          <option value="" disabled selected>Choose your option</option>
-          <option value="0">0</option>
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
-          <option value="8">8</option>
-          <option value="9">9</option>
-          <option value="10">10</option>
-       </select>
-     </form>
+      <label for="guestNum">Guests</label>
+      <select class="browser-default" id="guestNum">
+        <option value="" disabled selected>Choose your option</option>
+        <option value="0">0</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+     </select>
+     <br />
+      <%= form_for Attendee.new, url: api_attendees_path, params: @event do |f| %>
 
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Register</a>
-      <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat ">Cancel</a>
+
+
+      <% end %>
+      </div>
+
     </div>
   </div>
 
