added guests and cancellation for event

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -43,6 +43,16 @@
       .event-info h5 {
         font-size: 23px;
       }
+
+      #new_guest_list label {
+        font-size: 23px;
+      }
+      #new_guest_list input {
+        font-size: 25px;
+      }
+      .toast {
+        font-size: 27px;
+      }
     }
 }
 
@@ -60,6 +70,19 @@
       font-size: 23px;
       a.navside {
         font-size: 23px;
+      }
+      .event-info h5 {
+        font-size: 23px;
+      }
+
+      #new_guest_list label {
+        font-size: 23px;
+      }
+      #new_guest_list input {
+        font-size: 25px;
+      }
+      .toast {
+        font-size: 27px;
       }
     }
 }
