--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -106,3 +106,11 @@ div .event-info div {
 .register-button {
   // margin-left: 20px;
 }
+
+.addGuest {
+  top: 25px;
+}
+
+.deleteGuest {
+  top: 25px;
+}
